Create openapi spec
