# api/api.openapi.yaml
@@ -1,144 +1,41 @@
 openapi: 3.0.0
-servers:
-  - description: lambda-api API Server - Production
-    url: https://api.tomassabol.io/lambda-api
-  - description: lambda-api API Server - Test
-    url: https://api.tomassabol.io/lambda-api/test
-
 info:
   title: AWS CloudControl MCP Server
   description: AWS CloudControl MCP Server
-  version: "1.3.0"
+  version: 1.0.0
   contact:
     email: aws@tomassabol.com
-
+servers:
+  - description: AWS CloudControl MCP Server - Production
+    url: https://api.tomassabol.io/aws-cloudcontrol
 tags:
-  - name: AWS CloudControl MCP Server
-
-### Paths
-
+  - name: MCP
+    description: Model Context Protocol endpoints
 paths:
-  /v1/shipping/deadline:
-    parameters:
-      - $ref: "#/components/parameters/storeId"
-      - $ref: "#/components/parameters/shippingMethod"
-    get:
-      operationId: get-shipping-deadlines
-      summary: Get shipping deadlines
-      description: |
-        Get all shipping deadlines or specific shipping deadlines by `shippingMethod` and `storeId`.
-        > Query parameters are optional but if you use it, you need to provide `shippingMethod` and `storeId`. If no query parameters are provided, all shipping deadlines will be returned.
-      tags:
-        - Shipping deadlines
-      responses:
-        "200":
-          description: Shipping deadlines
-          content:
-            application/json:
-              schema:
-                $ref: "./schemas/GetShippingDeadlinesApiResponse.json"
-
-        "400":
-          $ref: "#/components/responses/invalid-request"
-
-        "404":
-          description: Shipping deadlines not found
-          content:
-            application/json:
-              schema:
-                $ref: "./schemas/ErrorApiResponse.json"
-              example:
-                error: "No deadlines found"
-
-        "500":
-          $ref: "#/components/responses/internal-error"
-
+  /mcp:
     post:
-      description: |
-        Create a shipping deadline.
-      operationId: create-shipping-deadline
-      summary: Create shipping deadline
+      operationId: post-mcp
       tags:
-        - Shipping deadlines
+        - MCP
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/mcp-response"
+        "400":
+          $ref: "#/components/responses/invalid-request"
+        "500":
+          $ref: "#/components/responses/internal-error"
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: "./schemas/CreateShippingDeadlineApiRequest.json"
-      responses:
-        "201":
-          description: Created
-          content:
-            application/json:
-              schema:
-                $ref: "./schemas/CreateShippingDeadlineApiResponse.json"
-        "400":
-          $ref: "#/components/responses/invalid-request"
-        "500":
-          $ref: "#/components/responses/internal-error"
-
-    put:
-      description: |
-        Update a shipping deadline by `deadlineId`.
-      operationId: update-shipping-deadline
-      summary: Update shipping deadline
-      tags:
-        - Shipping deadlines
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "./schemas/UpdateShippingDeadlineApiRequest.json"
-      responses:
-        "200":
-          description: Updated
-          content:
-            application/json:
-              schema:
-                $ref: "./schemas/UpdateShippingDeadlineApiResponse.json"
-        "400":
-          $ref: "#/components/responses/invalid-request"
-        "500":
-          $ref: "#/components/responses/internal-error"
-
-  /v1/shipping/deadline/{deadlineId}:
-    parameters:
-      - name: deadlineId
-        in: path
-        required: true
-        schema:
-          type: string
-    delete:
-      description: |
-        Delete a shipping deadline by `deadlineId`.
-      operationId: delete-shipping-deadline
-      summary: Delete shipping deadline
-      tags:
-        - Shipping deadlines
-      responses:
-        "200":
-          description: Deleted
-          content:
-            application/json:
-              schema:
-                $ref: "./schemas/SuccessApiResponse.json"
-        "404":
-          description: Deadline not found
-          content:
-            application/json:
-              schema:
-                $ref: "./schemas/ErrorApiResponse.json"
-        "500":
-          $ref: "#/components/responses/internal-error"
-
-### Components
-
+              $ref: "#/components/schemas/mcp-request"
 components:
   parameters:
-    # Query parameter
-
     storeId:
       name: storeId
       in: query
@@ -147,7 +44,6 @@ components:
       schema:
         type: string
       example: "17"
-
     shippingMethod:
       name: shippingMethod
       in: query
@@ -155,37 +51,40 @@ components:
       required: false
       schema:
         type: string
-      example: "allegro_dhl_kurier"
-
+      example: allegro_dhl_kurier
   schemas:
+    mcp-response:
+      $ref: ./schemas/MCPResponse.json
     error:
-      $ref: "./schemas/ErrorApiResponse.json"
-
+      $ref: ./schemas/ErrorApiResponse.json
+    success:
+      $ref: ./schemas/SuccessApiResponse.json
+    mcp-request:
+      $ref: ./schemas/MCPRequest.json
   responses:
     invalid-request:
-      description: "Invalid request parameters"
+      description: Invalid request parameters
       content:
         application/json:
           schema:
             $ref: "#/components/schemas/error"
           example:
-            error: "Invalid request"
+            error: Invalid request
             details:
               - instancePath: ""
                 schemaPath: "#/required"
                 keyword: required
-                params:
+                params: {}
                 missingProperty: example
                 message: must have required property 'example'
-            requestId: "b37d9af0-cc1e-4acb-a5f5-7fc9c968a759"
-
+            requestId: b37d9af0-cc1e-4acb-a5f5-7fc9c968a759
     internal-error:
-      description: "Internal Error"
+      description: Internal Error
       content:
         application/json:
           schema:
             $ref: "#/components/schemas/error"
           example:
-            error: "Internal error"
-            details: "See logs for more details."
-            requestId: "b37d9af0-cc1e-4acb-a5f5-7fc9c968a759"
+            error: Internal error
+            details: See logs for more details.
+            requestId: b37d9af0-cc1e-4acb-a5f5-7fc9c968a759
